--- a/error_screen.html
+++ b/error_screen.html
@@ -7,29 +7,13 @@
   <link rel="icon" type="image/x-icon" href="images/poison_mushroom.webp">
 
   <link href="https://fonts.cdnfonts.com/css/new-super-mario-font-u" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles/error_screen_styles.css">
 </head>
 
 <style>
 
-  .error_screen
-  {
-    display: grid;
-    grid-template-columns: 2fr 1fr
-  }
 
-  .error_txt
-  {
-    font-family: 'New Super Mario Font U';
-    font-size: 50px;
-    text-align: center;
-  }
-
-  .toad
-  {
-    width: 500px;
-    margin-left:0px;
-    margin-top:100px;
-  }
 
 </style>
 
