--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-  
+
     <link rel="stylesheet" href="styles/homepage_styles.css">
   </head>
 
@@ -129,7 +129,7 @@
 
     <div class="txt_below_examples"> Jump Into The Gallery! </div>
 
-    <button class="to_next_page_button">Let's-a Go!</button>
+    <a href="gallery.html"><button class="to_next_page_button">Let's-a Go!</button></a>
     
     <hr>
 
@@ -139,7 +139,7 @@
 
     <div class="txt_below_examples"> What Are You Waiting For? </div>
 
-    <a href="error_screen.html"><button class="join_us_now_button">Join Us Now!</button></a>
+    <a href="error_screen.html"><button class="join_us_now_button">Jump In!</button></a>
 
     <div class="footer_color">
 
