--- a/things_to_do.html
+++ b/things_to_do.html
@@ -44,7 +44,7 @@
     <div class="welcome_part">
       
       <div>
-        <img class="beginning_star" src="images/3D-superstar.png" alt="Mario Mushroom" width="250">
+        <img class="beginning_star" src="images/3d-superstar.png" alt="Mario Mushroom" width="250">
       </div>
 
       <div class="guide_title">
@@ -52,7 +52,7 @@
       </div>
 
       <div>
-        <img class="beginning_star" src="images/3D-superstar.png" alt="Mario Mushroom" width="250">
+        <img class="beginning_star" src="images/3d-superstar.png" alt="Mario Mushroom" width="250">
       </div>
 
     </div>
